added button functionalities to sports , cultural and other events

--- a/others.html
+++ b/others.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap"
     />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/events.css" />
   </head>
 
   <body
@@ -60,22 +61,32 @@
             />
           </div>
           <div
-            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5 dj_night"
           >
             <div>
               <h5 class="fw-bold fs-3">DJ Night&nbsp;</h5>
-              <div class="d-flex mb-2">
+              <div class="d-flex mb-2 dj_night-controls controls">
                 <button class="btn btn-success btn-sm me-2">About</button>
-                <button class="btn btn-sm me-2">Prices</button>
+                <button class="btn btn-sm me-2">Prizes</button>
                 <button class="btn btn-sm">Coordinators</button>
               </div>
-              <p class="text-muted mb-4">
+              <p class="text-muted mb-4" id="about">
                 College is not just about studying but also about having a good
                 time with friends and creating memories.We plan the night for
                 freshers to enjoy and meet new people. And for seniors, it
                 serves as an occasion to live their college life to the fullest
                 because soon they will graduate from the college.
               </p>
+              <ol class="text-muted mb-4 hide" id="prizes">
+                <li>1st - 1100/-</li>
+                <li>2nd - 500/-</li>
+                <li>3rd - 200/-</li>
+              </ol>
+              <ol class="text-muted mb-4 hide" id="coordinators">
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+              </ol>
             </div>
           </div>
         </div>
@@ -90,16 +101,16 @@
             />
           </div>
           <div
-            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5 face_painting"
           >
             <div>
               <h5 class="fw-bold fs-3">Face Painting&nbsp;</h5>
-              <div class="d-flex mb-2">
+              <div class="d-flex mb-2 face_painting-controls controls">
                 <button class="btn btn-success btn-sm me-2">About</button>
-                <button class="btn btn-sm me-2">Prices</button>
+                <button class="btn btn-sm me-2">Prizes</button>
                 <button class="btn btn-sm">Coordinators</button>
               </div>
-              <p class="text-muted mb-4">
+              <p class="text-muted mb-4" id="about">
                 Get ready with a new brush as we present yet another engaging
                 event- Face Painting. <br />
                 What is it that you wish to convey? What do you stand for? Grab
@@ -109,6 +120,16 @@
                 dreams! <br />
                 Paint to Express!
               </p>
+              <ol class="text-muted mb-4 hide" id="prizes">
+                <li>1st - 1100/-</li>
+                <li>2nd - 500/-</li>
+                <li>3rd - 200/-</li>
+              </ol>
+              <ol class="text-muted mb-4 hide" id="coordinators">
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+              </ol>
             </div>
           </div>
         </div>
@@ -123,16 +144,16 @@
             />
           </div>
           <div
-            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5 twist_a_tale"
           >
             <div>
               <h5 class="fw-bold fs-3">Twist-a-Tale&nbsp;</h5>
-              <div class="d-flex mb-2">
+              <div class="d-flex mb-2 twist_a_tale-controls controls">
                 <button class="btn btn-success btn-sm me-2">About</button>
-                <button class="btn btn-sm me-2">Prices</button>
+                <button class="btn btn-sm me-2">Prizes</button>
                 <button class="btn btn-sm">Coordinators</button>
               </div>
-              <p class="text-muted mb-4">
+              <p class="text-muted mb-4" id="about">
                 “There is something delicious about writing the first words of a
                 story. You never quite know where they will take you.”<br />
                 Tantransh is again here with yet another event for the magicians
@@ -140,6 +161,16 @@
                 become the most incredible wordsmith of our upcoming event
                 Twist-a-Tale.
               </p>
+              <ol class="text-muted mb-4 hide" id="prizes">
+                <li>1st - 1100/-</li>
+                <li>2nd - 500/-</li>
+                <li>3rd - 200/-</li>
+              </ol>
+              <ol class="text-muted mb-4 hide" id="coordinators">
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+              </ol>
             </div>
           </div>
         </div>
@@ -154,16 +185,16 @@
             />
           </div>
           <div
-            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5 blind_date"
           >
             <div>
               <h5 class="fw-bold fs-3">Blind Date&nbsp;</h5>
-              <div class="d-flex mb-2">
+              <div class="d-flex mb-2 blind_date-controls controls">
                 <button class="btn btn-success btn-sm me-2">About</button>
-                <button class="btn btn-sm me-2">Prices</button>
+                <button class="btn btn-sm me-2">Prizes</button>
                 <button class="btn btn-sm">Coordinators</button>
               </div>
-              <p class="text-muted mb-4">
+              <p class="text-muted mb-4" id="about">
                 Love is in the air as Tantransh is here with Ki and Ka- a blind
                 date event. Butterflies in your stomach? Do you have someone you
                 can't get off your mind but are just too afraid to confess.
@@ -173,6 +204,16 @@
                 ready for a date with destiny? Who knows, you may just find the
                 perfect match!
               </p>
+              <ol class="text-muted mb-4 hide" id="prizes">
+                <li>1st - 1100/-</li>
+                <li>2nd - 500/-</li>
+                <li>3rd - 200/-</li>
+              </ol>
+              <ol class="text-muted mb-4 hide" id="coordinators">
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+              </ol>
             </div>
           </div>
         </div>
@@ -187,22 +228,32 @@
             />
           </div>
           <div
-            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5 written_confessions"
           >
             <div>
               <h5 class="fw-bold fs-3">Written Confessions&nbsp;</h5>
-              <div class="d-flex mb-2">
+              <div class="d-flex mb-2 written_confessions-controls controls">
                 <button class="btn btn-success btn-sm me-2">About</button>
-                <button class="btn btn-sm me-2">Prices</button>
+                <button class="btn btn-sm me-2">Prizes</button>
                 <button class="btn btn-sm">Coordinators</button>
               </div>
-              <p class="text-muted mb-4">
+              <p class="text-muted mb-4" id="about">
                 How long will you bottle up those feelings? Let yourself be
                 drawn by the pull of love. <br />
                 Just say "I have a feeling for you." Or dedicate a song or poem
                 which can strike a chord with the one you are falling for. We'll
                 make sure your confession reaches them.
               </p>
+              <ol class="text-muted mb-4 hide" id="prizes">
+                <li>1st - 1100/-</li>
+                <li>2nd - 500/-</li>
+                <li>3rd - 200/-</li>
+              </ol>
+              <ol class="text-muted mb-4 hide" id="coordinators">
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+              </ol>
             </div>
           </div>
         </div>
@@ -247,5 +298,6 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bold-and-dark.js"></script>
+    <script src="js/events.js"></script>
   </body>
 </html>
