--- a/sports.html
+++ b/sports.html
@@ -102,22 +102,32 @@
             />
           </div>
           <div
-            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5 cricket"
           >
             <div>
               <h5 class="fw-bold">Cricket</h5>
-              <div class="mt-4 mb-4">
+              <div class="mt-4 mb-4 cricket-controls controls">
                 <button class="btn-sm btn btn-success me-2">About</button>
                 <button class="btn-sm btn me-2">Prizes</button>
                 <button class="btn-sm btn me-2">Coordinators</button>
               </div>
-              <p class="text-muted mb-4">
+              <p class="text-muted mb-4" id="about">
                 "You Don,t Win Or Lose The Games Because Of The 11 You
                 Select,You Win Or Lose With What Those 11 Do On The Field."<br />Pick
                 up your gears as one of the most loving sports of india is
                 summoning you all on the campus.The game of scoring and chasing
                 will enthrall your hearts towards thw Gabba of IET.
               </p>
+              <ol class="text-muted mb-4 hide" id="prizes">
+                <li>1st - 1100/-</li>
+                <li>2nd - 500/-</li>
+                <li>3rd - 200/-</li>
+              </ol>
+              <ol class="text-muted mb-4 hide" id="coordinators">
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+              </ol>
             </div>
           </div>
         </div>
@@ -132,22 +142,32 @@
             />
           </div>
           <div
-            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5 football"
           >
             <div>
               <h5 class="fw-bold">FOOTBALL</h5>
-              <div class="mt-4 mb-4">
+              <div class="mt-4 mb-4 football-controls controls">
                 <button class="btn-sm btn btn-success me-2">About</button>
                 <button class="btn-sm btn me-2">Prizes</button>
                 <button class="btn-sm btn me-2">Coordinators</button>
               </div>
-              <p class="text-muted mb-4">
+              <p class="text-muted mb-4" id="about">
                 "Football Is Played With The Head.Your Feet Are Just The
                 Tools."<br />
                 Tantransh is here again with a game of coordination,skills and
                 stamina.Get Your Squad and demonstrate what's best in you to
                 world at.
               </p>
+              <ol class="text-muted mb-4 hide" id="prizes">
+                <li>1st - 1100/-</li>
+                <li>2nd - 500/-</li>
+                <li>3rd - 200/-</li>
+              </ol>
+              <ol class="text-muted mb-4 hide" id="coordinators">
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+              </ol>
             </div>
           </div>
         </div>
@@ -162,22 +182,32 @@
             />
           </div>
           <div
-            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5 volleyball"
           >
             <div>
               <h5 class="fw-bold">VOLLEYBALL</h5>
-              <div class="mt-4 mb-4">
+              <div class="mt-4 mb-4 volleyball-controls controls">
                 <button class="btn-sm btn btn-success me-2">About</button>
                 <button class="btn-sm btn me-2">Prizes</button>
                 <button class="btn-sm btn me-2">Coordinators</button>
               </div>
-              <p class="text-muted mb-4">
+              <p class="text-muted mb-4" id="about">
                 "You Don,t Win Or Lose The Games Because Of The 11 You
                 Select,You Win Or Lose With What Those 11 Do On The Field."<br />Pick
                 up your gears as one of the most loving sports of india is
                 summoning you all on the campus.The game of scoring and chasing
                 will enthrall your hearts towards thw Gabba of IET.
               </p>
+              <ol class="text-muted mb-4 hide" id="prizes">
+                <li>1st - 1100/-</li>
+                <li>2nd - 500/-</li>
+                <li>3rd - 200/-</li>
+              </ol>
+              <ol class="text-muted mb-4 hide" id="coordinators">
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+              </ol>
             </div>
           </div>
         </div>
@@ -192,21 +222,31 @@
             />
           </div>
           <div
-            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5 badminton"
           >
             <div>
               <h5 class="fw-bold">BADMINTON</h5>
-              <div class="mt-4 mb-4">
+              <div class="mt-4 mb-4 badminton-controls controls">
                 <button class="btn-sm btn btn-success me-2">About</button>
                 <button class="btn-sm btn me-2">Prizes</button>
                 <button class="btn-sm btn me-2">Coordinators</button>
               </div>
-              <p class="text-muted mb-4">
+              <p class="text-muted mb-4" id="about">
                 "Are You Fast Enough To Handle The Speed Of A Shuttle?"<br />
                 If yes,then let the world be amazed by the speed and agility of
                 your moves in a compelling duet match of Badminton.Pick Up Yours
                 gears and fasten your shoelaces and meet us at.
               </p>
+              <ol class="text-muted mb-4 hide" id="prizes">
+                <li>1st - 1100/-</li>
+                <li>2nd - 500/-</li>
+                <li>3rd - 200/-</li>
+              </ol>
+              <ol class="text-muted mb-4 hide" id="coordinators">
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+              </ol>
             </div>
           </div>
         </div>
