--- a/technical.html
+++ b/technical.html
@@ -65,7 +65,7 @@
           >
             <div>
               <h5 class="fw-bold fs-3">Game of Codes&nbsp;</h5>
-              <div class="d-flex mb-2 goc-controls">
+              <div class="d-flex mb-2 goc-controls controls">
                 <button class="btn btn-success btn-sm me-2">About</button>
                 <button class="btn btn-sm me-2">Prizes</button>
                 <button class="btn btn-sm">Coordinators</button>
@@ -105,7 +105,7 @@
           >
             <div>
               <h5 class="fw-bold fs-3">Webify&nbsp;</h5>
-              <div class="d-flex mb-2 webify-controls">
+              <div class="d-flex mb-2 webify-controls controls">
                 <button class="btn btn-success btn-sm me-2">About</button>
                 <button class="btn btn-sm me-2">Prizes</button>
                 <button class="btn btn-sm">Coordinators</button>
@@ -147,7 +147,7 @@
           >
             <div>
               <h5 class="fw-bold fs-3">Shark Tank IET&nbsp;</h5>
-              <div class="d-flex mb-2 shark-controls">
+              <div class="d-flex mb-2 shark-controls controls">
                 <button class="btn btn-success btn-sm me-2">About</button>
                 <button class="btn btn-sm me-2">Prizes</button>
                 <button class="btn btn-sm">Coordinators</button>
@@ -189,7 +189,7 @@
           >
             <div>
               <h5 class="fw-bold fs-3">Terror in Error&nbsp;</h5>
-              <div class="d-flex mb-2 terror-controls">
+              <div class="d-flex mb-2 terror-controls controls">
                 <button class="btn btn-success btn-sm me-2">About</button>
                 <button class="btn btn-sm me-2">Prizes</button>
                 <button class="btn btn-sm">Coordinators</button>
@@ -230,7 +230,7 @@
           >
             <div>
               <h5 class="fw-bold fs-3">Tech-Buzz&nbsp;</h5>
-              <div class="d-flex mb-2 tech-buzz-controls">
+              <div class="d-flex mb-2 tech-buzz-controls controls">
                 <button class="btn btn-success btn-sm me-2">About</button>
                 <button class="btn btn-sm me-2">Prizes</button>
                 <button class="btn btn-sm">Coordinators</button>
