--- a/cultural.html
+++ b/cultural.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap"
     />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/events.css" />
   </head>
 
   <body
@@ -61,23 +62,33 @@
             </div>
           </div>
           <div
-            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5 talash"
           >
             <div>
               <h5 class="fw-bold">TALASH</h5>
-              <div class="mt-4 mb-4">
+              <div class="mt-4 mb-4 talash-controls controls">
                 <button class="btn-sm btn btn-success me-2">About</button>
                 <button class="btn-sm btn me-2">Prizes</button>
                 <button class="btn-sm btn me-2">Coordinators</button>
               </div>
 
-              <p class="text-muted mb-4">
+              <p class="text-muted mb-4" id="about">
                 "Yahan wahan dhuaan dhuaan chhupa kahan haan gupt hai wo."<br />
                 For all the mystery lovers out there,we have a trasure hunt
                 event just for your team(4-5 memebers).Read hints,decode clues
                 and find the assigned place the fastest grab your hands on the
                 prize that awaits you.
               </p>
+              <ol class="text-muted mb-4 hide" id="prizes">
+                <li>1st - 1100/-</li>
+                <li>2nd - 500/-</li>
+                <li>3rd - 200/-</li>
+              </ol>
+              <ol class="text-muted mb-4 hide" id="coordinators">
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+              </ol>
             </div>
           </div>
         </div>
@@ -92,21 +103,31 @@
             />
           </div>
           <div
-            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5 fashion-heist"
           >
             <div>
               <h5 class="fw-bold">FASHION HEIST</h5>
-              <div class="mt-4 mb-4">
+              <div class="mt-4 mb-4 fashion-heist-controls controls">
                 <button class="btn-sm btn btn-success me-2">About</button>
                 <button class="btn-sm btn me-2">Prizes</button>
                 <button class="btn-sm btn me-2">Coordinators</button>
               </div>
-              <p class="text-muted mb-4">
+              <p class="text-muted mb-4" id="about">
                 "Yeh Jalwa Yeh Jalwa Fashion Ka Hai Jalwa"<br />
                 Scurry around your wardrobes as we invite all the fashionists of
                 our collage to showcase their sense of style in our ramp walk
                 event and enchant the audience with their flair and grace.
               </p>
+              <ol class="text-muted mb-4 hide" id="prizes">
+                <li>1st - 1100/-</li>
+                <li>2nd - 500/-</li>
+                <li>3rd - 200/-</li>
+              </ol>
+              <ol class="text-muted mb-4 hide" id="coordinators">
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+              </ol>
             </div>
           </div>
         </div>
@@ -123,16 +144,16 @@
             </div>
           </div>
           <div
-            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5 open_stage"
           >
             <div>
               <h5 class="fw-bold">OPEN STAGE</h5>
-              <div class="mt-4 mb-4">
+              <div class="mt-4 mb-4 open_stage-controls controls">
                 <button class="btn-sm btn btn-success me-2">About</button>
                 <button class="btn-sm btn me-2">Prizes</button>
                 <button class="btn-sm btn me-2">Coordinators</button>
               </div>
-              <p class="text-muted mb-4">
+              <p class="text-muted mb-4" id="about">
                 "Filmein Sirf Teen Cheezo Ke Wajah Se Chalti
                 Hai:Entertainment,Entertainment,Entertainment;Aur Main
                 Entertainment Hoon"<br />
@@ -143,6 +164,16 @@
                 their reactions would determine the conqueror of this open
                 stage.
               </p>
+              <ol class="text-muted mb-4 hide" id="prizes">
+                <li>1st - 1100/-</li>
+                <li>2nd - 500/-</li>
+                <li>3rd - 200/-</li>
+              </ol>
+              <ol class="text-muted mb-4 hide" id="coordinators">
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+              </ol>
             </div>
           </div>
         </div>
@@ -157,21 +188,31 @@
             />
           </div>
           <div
-            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5 stranger_clicks"
           >
             <div>
               <h5 class="fw-bold">STRANGER CLICKS</h5>
-              <div class="mt-4 mb-4">
+              <div class="mt-4 mb-4 stranger_clicks-controls controls">
                 <button class="btn-sm btn btn-success me-2">About</button>
                 <button class="btn-sm btn me-2">Prizes</button>
                 <button class="btn-sm btn me-2">Coordinators</button>
               </div>
-              <p class="text-muted mb-4">
+              <p class="text-muted mb-4" id="about">
                 "Tu Kheech Meri Photo Tu Kheecj Meri Photo Tu Kheech Meri Photo
                 Piyaa"<br />Capture the still shots of the fun and bustling fest
                 environment as the photograph which strikes a choed with the
                 judges would be awarded.
               </p>
+              <ol class="text-muted mb-4 hide" id="prizes">
+                <li>1st - 1100/-</li>
+                <li>2nd - 500/-</li>
+                <li>3rd - 200/-</li>
+              </ol>
+              <ol class="text-muted mb-4 hide" id="coordinators">
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+              </ol>
             </div>
           </div>
         </div>
@@ -186,22 +227,32 @@
             />
           </div>
           <div
-            class="col d-md-flex align-items-md-end align-items-lg-center mb-5"
+            class="col d-md-flex align-items-md-end align-items-lg-center mb-5 musical_chairs"
           >
             <div>
               <h5 class="fw-bold">MUSICAL CHAIRS</h5>
-              <div class="mt-4 mb-4">
+              <div class="mt-4 mb-4 musical_chairs-controls controls">
                 <button class="btn-sm btn btn-success me-2">About</button>
                 <button class="btn-sm btn me-2">Prizes</button>
                 <button class="btn-sm btn me-2">Coordinators</button>
               </div>
-              <p class="text-muted mb-4">
+              <p class="text-muted mb-4" id="about">
                 Musical Chairs, also known as Trip to Jerusalem, is a game of
                 elimination involving players, chairs and music. It is a staple
                 of many parties worldwide. <br />
                 Trantransh brings you this fun game to enjoy and groove to the
                 music with chairs.
               </p>
+              <ol class="text-muted mb-4 hide" id="prizes">
+                <li>1st - 1100/-</li>
+                <li>2nd - 500/-</li>
+                <li>3rd - 200/-</li>
+              </ol>
+              <ol class="text-muted mb-4 hide" id="coordinators">
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name3</li>
+              </ol>
             </div>
           </div>
         </div>
@@ -246,5 +297,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bold-and-dark.js"></script>
+    <script src="js/events.js"></script>
   </body>
 </html>
