--- a/cultural.html
+++ b/cultural.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Services - Brand</title>
+    <title>Cultural Events - Tantransh'22</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <script
       src="https://kit.fontawesome.com/b27a8a84a8.js"
@@ -28,7 +28,7 @@
   >
     <nav class="navbar navbar-dark fixed-top navbar-shrink py-3" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <span>
             <img
               src="assets/img/logo.jpg"
