--- a/sports.html
+++ b/sports.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Services - Brand</title>
+    <title>Sports Events - Tantransh'22</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <script
       src="https://kit.fontawesome.com/b27a8a84a8.js"
