Added Snow Particles Effect

--- a/cultural.html
+++ b/cultural.html
@@ -80,9 +80,9 @@
                 prize that awaits you.
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1st - 1100/-</li>
-                <li>2nd - 500/-</li>
-                <li>3rd - 200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
@@ -119,9 +119,9 @@
                 event and enchant the audience with their flair and grace.
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1st - 1100/-</li>
-                <li>2nd - 500/-</li>
-                <li>3rd - 200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
@@ -165,9 +165,9 @@
                 stage.
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1st - 1100/-</li>
-                <li>2nd - 500/-</li>
-                <li>3rd - 200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
@@ -204,9 +204,9 @@
                 judges would be awarded.
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1st - 1100/-</li>
-                <li>2nd - 500/-</li>
-                <li>3rd - 200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
@@ -244,9 +244,9 @@
                 music with chairs.
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1st - 1100/-</li>
-                <li>2nd - 500/-</li>
-                <li>3rd - 200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
