--- a/others.html
+++ b/others.html
@@ -78,9 +78,9 @@
                 because soon they will graduate from the college.
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1st - 1100/-</li>
-                <li>2nd - 500/-</li>
-                <li>3rd - 200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
@@ -121,9 +121,9 @@
                 Paint to Express!
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1st - 1100/-</li>
-                <li>2nd - 500/-</li>
-                <li>3rd - 200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
@@ -162,9 +162,9 @@
                 Twist-a-Tale.
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1st - 1100/-</li>
-                <li>2nd - 500/-</li>
-                <li>3rd - 200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
@@ -205,9 +205,9 @@
                 perfect match!
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1st - 1100/-</li>
-                <li>2nd - 500/-</li>
-                <li>3rd - 200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
@@ -245,9 +245,9 @@
                 make sure your confession reaches them.
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1st - 1100/-</li>
-                <li>2nd - 500/-</li>
-                <li>3rd - 200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
