--- a/sports.html
+++ b/sports.html
@@ -79,9 +79,9 @@
                 skills on the board of Chess.
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1st - 1100/-</li>
-                <li>2nd - 500/-</li>
-                <li>3rd - 200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
@@ -119,9 +119,9 @@
                 will enthrall your hearts towards thw Gabba of IET.
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1st - 1100/-</li>
-                <li>2nd - 500/-</li>
-                <li>3rd - 200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
@@ -159,9 +159,9 @@
                 world at.
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1st - 1100/-</li>
-                <li>2nd - 500/-</li>
-                <li>3rd - 200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
@@ -199,9 +199,9 @@
                 will enthrall your hearts towards thw Gabba of IET.
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1st - 1100/-</li>
-                <li>2nd - 500/-</li>
-                <li>3rd - 200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
@@ -238,9 +238,9 @@
                 gears and fasten your shoelaces and meet us at.
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1st - 1100/-</li>
-                <li>2nd - 500/-</li>
-                <li>3rd - 200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
