--- a/technical.html
+++ b/technical.html
@@ -78,9 +78,9 @@
                 Tantransh'22 brings to you a DSA coding carnival- Game of Codes.
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1st - 1100/-</li>
-                <li>2nd - 500/-</li>
-                <li>3rd - 200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
@@ -120,9 +120,9 @@
                 it takes!
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1100/-</li>
-                <li>500/-</li>
-                <li>200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
@@ -162,9 +162,9 @@
                 So, get ready with your innovative ideas.
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1100/-</li>
-                <li>500/-</li>
-                <li>200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
@@ -203,9 +203,9 @@
                 combo of accuracy and speed will be the best strategy to win.
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1100/-</li>
-                <li>500/-</li>
-                <li>200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
@@ -245,9 +245,9 @@
                 yourself to the top
               </p>
               <ol class="text-muted mb-4 hide" id="prizes">
-                <li>1100/-</li>
-                <li>500/-</li>
-                <li>200/-</li>
+                <li>🥇 XXX/-</li>
+                <li>🥈 XXX/-</li>
+                <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
                 <li>Name1</li>
