added data of coordinators

--- a/cultural.html
+++ b/cultural.html
@@ -85,9 +85,9 @@
                 <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+                <li>Akash Chaudhary</li>
+                <li>Ashmit Shukla</li>
+                <li>Sandeep</li>
               </ol>
             </div>
           </div>
@@ -124,9 +124,9 @@
                 <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+                <li>Aditi Verma</li>
+                <li>Ritik Jain</li>
+                <li>Mayank Jha</li>
               </ol>
             </div>
           </div>
@@ -170,9 +170,9 @@
                 <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+                <li>Shikhar Gupta</li>
+                <li>Vaibhav Garg</li>
+                <li>Nupur Gupta</li>
               </ol>
             </div>
           </div>
@@ -209,9 +209,9 @@
                 <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+                <li>Vaibhav Garg</li>
+                <li>Aditi Verma</li>
+                <li>Ayushi Chaudhary</li>
               </ol>
             </div>
           </div>
@@ -249,9 +249,9 @@
                 <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+                <li>Anupam Singh</li>
+                <li>Abhishek Rai</li>
+                <li>Mansi</li>
               </ol>
             </div>
           </div>
