--- a/sports.html
+++ b/sports.html
@@ -64,7 +64,7 @@
           >
             <div>
               <h5 class="fw-bold">CHESS</h5>
-              <div class="mt-4 mb-4 chess-controls">
+              <div class="mt-4 mb-4 chess-controls controls">
                 <button class="btn-sm btn btn-success me-2">About</button>
                 <button class="btn-sm btn me-2">Prizes</button>
                 <button class="btn-sm btn me-2">Coordinators</button>
@@ -84,9 +84,9 @@
                 <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+                <li>Nandini Rout</li>
+                <li>Kartik Gupta</li>
+                <li>Vaibhav Gupta</li>
               </ol>
             </div>
           </div>
@@ -124,9 +124,9 @@
                 <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+                <li>Ashmit</li>
+                <li>Sandeep Yadav</li>
+                <li>Purshottam</li>
               </ol>
             </div>
           </div>
@@ -164,9 +164,9 @@
                 <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+                <li>Abhishek Raj</li>
+                <li>Aditya Agarwal</li>
+                <li>Amit Awasthi</li>
               </ol>
             </div>
           </div>
@@ -204,9 +204,9 @@
                 <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+                <li>Purshottam</li>
+                <li>Aman Kumar</li>
+                <li>Ansh Kumar</li>
               </ol>
             </div>
           </div>
@@ -243,9 +243,9 @@
                 <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+                <li>Parth Alok</li>
+                <li>Ayush kumar Mishra</li>
+                <li>Shivam jain</li>
               </ol>
             </div>
           </div>
