--- a/technical.html
+++ b/technical.html
@@ -83,9 +83,9 @@
                 <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+                <li>Apurv Malviya</li>
+                <li>Ayush</li>
+                <li>Vipin Yadav</li>
               </ol>
             </div>
           </div>
@@ -125,9 +125,9 @@
                 <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+                <li>Tanisha Vats</li>
+                <li>Vaibhav Shukla</li>
+                <li>Shudhanshu Ranjan</li>
               </ol>
             </div>
           </div>
@@ -167,9 +167,9 @@
                 <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+                <li>Shashank Taliwal</li>
+                <li>Aryash Ranjan</li>
+                <li>Anurag Mishra</li>
               </ol>
             </div>
           </div>
@@ -208,9 +208,9 @@
                 <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+                <li>Vaibhav</li>
+                <li>Shikhar Gupta</li>
+                <li>Kushagra Bansal</li>
               </ol>
             </div>
           </div>
@@ -250,9 +250,9 @@
                 <li>🥉 XXX/-</li>
               </ol>
               <ol class="text-muted mb-4 hide" id="coordinators">
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
+                <li>Aditi Verma</li>
+                <li>Nandini Rout</li>
+                <li>Divyansh</li>
               </ol>
             </div>
           </div>
